--- a/package.json
+++ b/package.json
@@ -20,8 +20,8 @@
     "react-chartjs-2": "^5.1.0",
     "react-countup": "^6.4.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^4.9.0",
     "react-scripts": "5.0.1",
-   
     "styled-components": "^5.3.6",
     "web-vitals": "^2.1.4"
   },
